Downgrade to Java LTS (11)
* This enables us to remove "preview feature" cruft which clouds the example