@@ -28,32 +28,5 @@ allprojects {
             testRuntimeOnly(group = "org.junit.jupiter", name = "junit-jupiter-engine", version = junitJupiterVersion)
         }
     }
-
-    java {
-        sourceCompatibility = JavaVersion.VERSION_15
-        targetCompatibility = JavaVersion.VERSION_15
-    }
-
-    tasks {
-        /**
-         * Enable Java language preview features (so we can "records")
-         */
-        withType(JavaCompile::class.java) {
-            options.compilerArgs.addAll(arrayOf("--enable-preview"))
-        }
-
-        withType(Test::class.java) {
-            jvmArgs = listOf("--enable-preview")
-            useJUnitPlatform()
-        }
-
-        named<CreateStartScripts>("startScripts") {
-            defaultJvmOpts = listOf("--enable-preview")
-        }
-
-        named<JavaExec>("run") {
-            jvmArgs = listOf("--enable-preview")
-        }
-    }
 }
 
